--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,16 @@
   margin: 0;
 }
 
-html {
-  background-image: url('./photos/woodplanks.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 100%;
- 
-}
-
 #root {
   height: 100vh;
   width: 100vw;
+  background-image: 
+    url('https://freepikpsd.com/wp-content/uploads/2019/11/transparent-png-leaf-border-4-Images.png'),
+    url('./photos/woodplanks.jpg');
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100%; 
 }
 
 body {
@@ -26,13 +24,13 @@ header {
   display: flex;
   width: 100%;
   justify-content: center;
-  height: 100px;
+  height: 200px;
 }
 
 #name-container {
   display: flex;
-  width: 25%;
-  
+  width: 30%;
+  align-items: flex-end;
 }
 
 #name-header {
@@ -43,10 +41,11 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 100%;
+  height: 50%;
   width: 100%;
   border-radius: 10px;
   margin: 15px;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.433);
-
+  font-family: 'MedievalSharp', cursive;
+  font-size: 42px;
 }
