--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,9 @@
   height: 100vh;
   width: 100vw;
   background-image: 
-    url('https://freepikpsd.com/wp-content/uploads/2019/11/transparent-png-leaf-border-4-Images.png'),
-    url('./photos/woodplanks.jpg');
-  background-size:cover;
+  url('https://freepikpsd.com/wp-content/uploads/2019/11/transparent-png-leaf-border-4-Images.png'),
+  url('./photos/woodplanks.jpg');
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   min-height: 100%; 
@@ -24,7 +24,7 @@ header {
   display: flex;
   width: 100%;
   justify-content: center;
-  height: 200px;
+  height: 20%;
 }
 
 #name-container {
@@ -49,3 +49,70 @@ header {
   font-family: 'MedievalSharp', cursive;
   font-size: 42px;
 }
+
+main {
+  display: flex;
+  height: 70%;
+  flex-flow: row wrap;
+}
+ 
+.post-container {
+  display: flex;
+  height: 50%;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.post {
+  background-image: url('./photos/parchment.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+  height: 200px;
+  width: 200px;
+  justify-content: center;
+  text-align: center;
+  text-decoration: underline;
+  padding: 10px;
+  font-family: 'MedievalSharp', cursive;
+
+}
+
+.post:hover {
+  transform: scale(1.1)
+}
+
+#who-i-am {
+  transform: rotate(-10deg)
+}
+
+#projects {
+  transform: rotate(10deg);
+}
+
+#hobbies {
+  transform: rotate(-10deg)
+}
+
+#contact-information {
+  transform: rotate(10deg);
+}
+
+/* #contact-container {
+  background-image: url('./photos/parchment.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+  width: 75%;
+  height: 50%;
+}
+
+#contact-information {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+} */
