--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ main {
   width: 50%;
   justify-content: center;
   align-items: center;
+  /* transition: width 2s, height 2s; */
 }
 
 .expand-quadrant {
