--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,10 @@ main {
 
 .post-title {
   text-decoration: underline;
-  padding: 10px;
+  margin: 10px;
   font-family: 'MedievalSharp', cursive;
   font-size: 36px;
+  height: 20%;
 }
 
 .scribble-post-information {
@@ -122,14 +123,14 @@ main {
 
 .carousel-container {
   display: flex;
-  align-items: center;
   width: 100%;
+  height: 80%;
 }
 
 .arrow {
   width: 10%;
-  justify-content: center;
-  align-items: center;
+  align-self: center;
+  margin: 5px;
 }
 
 .project-container {
