--- a/src/App.css
+++ b/src/App.css
@@ -134,5 +134,16 @@ main {
 }
 
 .project-container {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-evenly;
   width: 80%;
+  margin: 10px;
+  padding: 30px;
+}
+
+.links {
+  display: flex;
+  flex-flow: column wrap;
+  font-size: 22px;
 }
