--- a/src/App.css
+++ b/src/App.css
@@ -147,3 +147,15 @@ main {
   flex-flow: column wrap;
   font-size: 22px;
 }
+
+.post-header {
+  display: flex;
+  justify-content: center;
+}
+
+#exit-icon {
+  margin: 10px;
+  font-size: 28px;
+  position: absolute;
+  right: 30px;
+}
