--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@ main {
 
 .arrow {
   width: 10%;
+  font-size: 26px;
   align-self: center;
   margin: 5px;
 }
@@ -181,4 +182,33 @@ main {
 
 #exit-icon:hover {
   cursor: pointer;
+}
+
+#senders-email {
+  margin: 10px;
+}
+
+#email-input {
+  
+  border: 0;
+  border-radius: 5px;
+  height: 40px;
+  margin: 5px;
+}
+
+#message {
+  height: 200px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#message-input {
+  height: 90%;
+  width: 50%;
+  border: 0;
+  margin: 5px;
+  border-radius: 5px;
+
 }
