--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,8 @@
 }
 
 #root {
-  /* height: 100vh; */
   width: 100vw;
-  background-image: 
-  /* url('https://i.imgur.com/vRGdZ7m.png'), */
-  url('photos/woodplanks.jpg');
+  background-image: url('photos/woodplanks.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -238,6 +235,7 @@ main {
 }
 
 #current-picture {
-  width: 70%;
+  width: 90%;
   height: 60vh;
 }
+
