--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,9 @@ main {
 
 #current-picture {
   width: 90%;
-  height: 60vh;
+  height: 55vh;
 }
 
+#picture-description {
+  font-size: 28px;
+}
