--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,6 @@ main {
 
 .carousel-container {
   display: flex;
-  /* flex-direction: column wrap; */
   width: 100%;
   height: 80%;
 }
@@ -155,7 +154,6 @@ main {
   justify-content: space-evenly;
   width: 80%;
   margin: 10px;
-  /* padding: 20px; */
 }
 
 .links {
@@ -173,7 +171,7 @@ main {
   margin: 10px;
   font-size: 28px;
   position: absolute;
-  right: 30px;
+  right: 120px;
 }
 
 #exit-icon:hover {
@@ -258,15 +256,21 @@ main {
   main {
     overflow: scroll;
   }
+  #exit-icon {
+    right: 50px
+  }
 }
 
-@media ( max-width: 960px ) {
+@media (min-width: 501px) and ( max-width: 960px ) {
   .expanded-post-container {
     overflow: scroll;
   }
   #current-picture {
     width: 100%;
     height: 85%;
+  }
+  #exit-icon {
+    right: 65px
   }
 }
 
