--- a/src/App.css
+++ b/src/App.css
@@ -259,6 +259,9 @@ main {
   #exit-icon {
     right: 50px
   }
+  .expanded-post-container {
+    overflow: scroll;
+  }
 }
 
 @media (min-width: 501px) and ( max-width: 960px ) {
